# django-simple-notifications

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt
backend/: .env-sample  MANIFEST.in  pyproject.toml
backend/simple_notifications/: __init__.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
backend/simple_notifications/migrations/: 0001_initial.py  0003_pushsubscription_generic_key.py  0004_datamigration_generic_user.py  0005_pushsubscription_remove_old_cols.py  0006_pushsubscription_metadata_pushsubscription_name_and_more.py  0006_remove_pushsubscription_app_name_and_more.py
frontend/: package.json  tsconfig.json
frontend/src/: index.ts  notifications.ts  sw-utils.ts  types.ts
simple_notifications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
simple_notifications/migrations/: 0002_pushsubscription_app_name.py
