[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-simple-notifications"
dynamic = ["version"]
description = "A simple Django app for notifications"
readme = "README.md"
authors = [
    { name = "Marko VreÄer" }
]
license = { text = "MIT" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.16",
    "pywebpush>=2.0",
]

[project.urls]
Homepage = "https://github.com/Yxmaxy/django-simple-notifications"
Repository = "https://github.com/Yxmaxy/django-simple-notifications.git"

[tool.setuptools]
packages = ["simple_notifications"]
include-package-data = true

[tool.setuptools.package-data]
"simple_notifications" = ["migrations/*.py", "migrations/*/*.py", "templates/*.txt"]

[tool.setuptools.dynamic]
version = {attr = "simple_notifications.__version__"}
